# RL_Go_game_bot

./: .gitignore  README.md  SETUP.md  demo.py  doc.txt  out.txt  output.txt  prpt.txt  prpt_2.txt  pyproject.toml
data/model/: episode_1.pth  episode_2.pth  first.pth  test.pth
gym_go/: __init__.py
gym_go/envs/: go_env.py
jupiter_notebooks/: first.ipynb  fourth.ipynb  launch_all.ipynb  sample_games.ipynb  sample_games_batch.ipynb  sample_games_parallel.ipynb  second.ipynb  summa.ipynb  train_net copy.ipynb  train_net.ipynb  troisieme.ipynb
src/: config.py  data_base_printing.py  demo.py  drop.py  info.py  laucher_plgrid.py  laucher_sample_train.py  laucher_sample_train_PC.py  laucher_test.py  loss_performance.py  performance.py  performance_batch.py  play.py  play_performance.py  play_performance_batch.py  sample_batch.py  sample_classic.py  sample_parallel.py  test.py  test_train_gen_2.py  train.py  transfer.py
src/RL_GoBot/: MCTSearch.py  Node.py  batch_MCTSearch.py  batch_game_creation.py  batch_rollout.py  batch_rollout_gpu.py  batched_game_creation.py  classic_MCTSearch.py  classic_game_creation.py  classic_rollout.py  data_base.py  game_creation.py  learning.py  model.py  parallel_MCTSearch.py  parallel_game_creation.py  parallel_rollout.py  parallele_game_creation.py  rollout.py  test.py  test.txt  test2.py  var.py
src/gym_go/: __init__.py  gogame.py  rendering.py
src/output/: batch_output.txt  classic_output.txt  parallel_output.txt
src/projet_final.egg-info/: PKG-INFO  (+3 more)
tests/: opus.py  test_RL_GoBot.py  test_db.py  test_gym_go.py  test_rollout.py
(+12 files in other folders)
